[project]

name = "reviewers"  # Required

version = "0.0.1"  # Required


description = "Generate sample movie reviews data for data science projects" # Optional
readme = "README.md" # Optional


requires-python = ">=3.7"


license = {file = "LICENSE.txt"}


keywords = ["sample", "setuptools", "development"]  # Optional


authors = [
    { name="Lorna Aine", email="lorna.aine@duke.edu" },
    { name="Pragya Raghuvanshi", email="pragya.raghuvanshi@duke.edu" },
    { name="Kashaf Ali", email="kashaf.ali@duke.edu" },
    { name="Aadila Jasmin", email="Aadila.jasmin@duke.edu" }
]


classifiers = [  
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only"
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Data Scientists",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
]


dependencies = [ # Optional
  "pandas>=1.4.4"
]


[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]


[project.urls]  # Optional
"Homepage" = "https://github.com/lornamariak/reviews"
"Source" = "https://github.com/lornamariak/reviews"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = ["setuptools.build_meta"]
